<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundcolor"
    android:orientation="vertical" >

    <TextView
        style="@style/text_title_style"
        android:layout_marginLeft="8dp"
        android:text="@string/setup1" />

    <ImageView
        style="@style/devide_line_style"
        android:contentDescription="@string/devide_line" />

    <TextView
        style="@style/text_content_style"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/setup1_content1" />

    <TextView
        style="@style/text_content_style"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:drawableLeft="@android:drawable/btn_star_big_on"
        android:gravity="center_vertical"
        android:text="@string/setup1_content2" />

    <TextView
        style="@style/text_content_style"
        android:layout_marginLeft="8dp"
        android:drawableLeft="@android:drawable/btn_star_big_on"
        android:gravity="center_vertical"
        android:text="@string/setup1_content3" />

    <TextView
        style="@style/text_content_style"
        android:layout_marginLeft="8dp"
        android:drawableLeft="@android:drawable/btn_star_big_on"
        android:gravity="center_vertical"
        android:text="@string/setup1_content4" />

    <TextView
        style="@style/text_content_style"
        android:layout_marginLeft="8dp"
        android:drawableLeft="@android:drawable/btn_star_big_on"
        android:gravity="center_vertical"
        android:text="@string/setup1_content5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:gravity="center_horizontal"
        android:layout_marginTop="16dp">
        <ImageView 
            android:contentDescription="@string/devide_line"
           style="@style/image_status_on_style"/>

         <ImageView
             style="@style/image_status_off_style"
             android:layout_marginLeft="5dp"
             android:contentDescription="@string/devide_line" />

          <ImageView
              style="@style/image_status_off_style"
              android:layout_marginLeft="5dp"
              android:contentDescription="@string/devide_line" />

           <ImageView
               style="@style/image_status_off_style"
               android:layout_marginLeft="5dp"
               android:contentDescription="@string/devide_line" />

    </LinearLayout>
	
    <RelativeLayout 
         android:layout_width="match_parent"
        android:layout_height="match_parent"  >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="8dp"
            android:drawableRight="@drawable/next"
            android:text="@string/setup1_next"
            android:id="@+id/btn_next" />
        
        <ImageView android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:contentDescription="@string/devide_line"
        android:src="@drawable/setup1"
        android:layout_centerHorizontal="true" 
        android:paddingTop="20dp"/>
    </RelativeLayout>
</LinearLayout>